--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,20 +8,35 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    /* --background-start-rgb: 0, 0, 0; */
-    --background-end-rgb: 0, 0, 0;
-  }
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184/var(--tw-text-opacity));
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139/var(--tw-text-opacity));
+}
+
+.text-sm {
+  font-size: .875rem;
+  line-height: 1.25rem;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
+}
+
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42/var(--tw-bg-opacity));
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-sans {
+  font-family: var(--font-inter),ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-feature-settings: "ss03","cv02","cv11";
 }
